# intellicredit-openenv

./: .dockerignore  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README.md  VERSIONING.md  __init__.py  baseline_results.json  client.py  compare_results.py  eval_llm.py  flow.txt  inference.py  models.py  openenv.yaml  project_knowledge.md  pyproject.toml  requirements.txt
.github/workflows/: setup-versioning.yml  sync_to_HF_spaces.yml
docs/: blog.md  mini_blog.md
evaluation/: compare.py  evaluate.py
evaluation/charts/: reward_curves.txt
evaluation/results/: baseline_results_v2.json  qualitative_examples.json  reflection_results.json
server/: __init__.py  action_parser.py  agent_loop.py  app.py  dataset.py  intellicredit_env.py  reflection.py  reward.py  tool_executor.py
training/: IntelliCredit_GRPO.ipynb  colab_grpo_3b_45min.py  colab_grpo_3b_v2.py  colab_grpo_training.py  colab_online_grpo.ipynb  colab_online_grpo.py  generate_dataset.py  grpo_rewards.py  make_notebook.py  requirements.txt  train_grpo.py  train_ppo.py
